--- a/ProjectPlan/ProjectPlan.csproj
+++ b/ProjectPlan/ProjectPlan.csproj
@@ -5,6 +5,10 @@
     <UserSecretsId>aspnet-ProjectPlan-E7F7A122-EC5D-4FEA-9416-04029F24598C</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Views\Groups\Comment.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
